# ISEP_CyberSec

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: CONTRIBUTING.md  semantic.yml
app/: README.md
app/backend/: .env  main.py  pyproject.toml  ruff.toml
app/backend/alembic/: env.py
app/backend/api/v1/: deps.py  router.py
app/backend/api/v1/endpoints/: users.py
app/backend/config/: settings.py
app/backend/models/db/: session.py  users.py
app/backend/models/schema/: account.py  base.py  users.py
app/backend/repository/: base.py  users.py
app/backend/security/: password.py
app/backend/utils/: formatters.py
app/frontend/: README.md  package-lock.json
app/frontend/src/: App.jsx
app/frontend/src/components/: AdminPage.jsx  ChangePassword.jsx  JoinTeam.jsx  Login.jsx  Navbar.jsx  Register.jsx  Teams.jsx  challengespage.jsx
app/frontend/src/utils/: passwordUtils.jsx
challenges/: README.md
challenges/crypto/base64-secret-decode/: Dockerfile  README.md  challenge.yml
challenges/example/: README.md
challenges/hidden_key_cookie/: Dockerfile  README.md  app.py  challenge.yml
challenges/hidden_network_treasure/: Dockerfile
challenges/stack_smashing/: README.md
challenges/stack_smashing/src/: server.c
challenges/stego/hidden-cat/: Dockerfile  README.md  challenge.yml
private_challenges/hidden_key_cookie/: flag.txt  secret.key  solution.md
solution_challenges/hidden_key_cookie/: flag.txt  secret.key  solution.md
